--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -6,6 +6,7 @@ body{
     color: #767b91;
     padding-left: 100px;
     padding-top: 200px;
+    padding-right: 200px;
 }
 ul{
     list-style: none;
@@ -15,3 +16,30 @@ a{
     text-decoration: none;
 }
         
+footer{
+    text-align: center;
+}
+
+section{
+    text-align: justify;
+}
+
+.text-one{
+    background-color: #345995;
+    color: #E0E2DB;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+
+#id-example-one{
+    background-color: #D9F4C7;
+    color: #AC9969;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
