--- a/ProyectoExamen1/styles/styles.css
+++ b/ProyectoExamen1/styles/styles.css
@@ -3,20 +3,21 @@ body{
 }
 header{
     background-color:#82AC9F;
-    color: white;
     text-align: center;
     padding-bottom: 2%;
     padding-top: 2%;
 }
 
 body{
+    color: white;
     margin:0%;
     padding:0%;
-    background-color: gray;
+    background-color:gray;
+    font-size: .22in;
 }
 
 .right{
-    background-color: whitesmoke;
+    background-color: #3F403F;
     float:left;
 	width:40%;
 	box-sizing:border-box;
@@ -25,7 +26,7 @@ body{
 }
 
 .left{
-    background-color: gray;
+    background-color: #56667A;
     float:left;
 	width:60%;
 	box-sizing:border-box;
